added seeder for admin, fix some code issues
