# storage/api-docs/api-docs.json
@@ -296,8 +296,8 @@
                                         "description": "Status",
                                         "type": "string",
                                         "enum": [
-                                            "approver",
-                                            "admin"
+                                            "approved",
+                                            "disapproved"
                                         ]
                                     }
                                 },
